--- a/index.html
+++ b/index.html
@@ -12,48 +12,46 @@
 <body>
     <header>
         <!--Navagation bar-->
-        <h1 class="
-        #00c853 green accent-4">
-            <a href='/'>Ruff! Ruff!</a>
-        </h1>
         <nav>
-            <ul>
+            <div class='nav-wrapper #7cb342 light-green darken-1'>
+                <a href='/' class='brand-logo'>Ruff! Ruff!</a>
+            <ul id='nav-mobile' class='right hide-on-med-and-down'>
                 <!--Should we attempt to add a search bar?-->
-                <li>
-
+                <li><a href='walkers.html'>Walkers</a>
                     <!--First tab goes here-->
                 </li>
-                <li>
+                <li><a href='sitters.html'>Sitters</a>
                     <!--Second tab-->
                 </li>
-                <li>
+                <li><a href='bon-appetit.html'>Bon Appetit</a>
                     <!--third tab-->
                 </li>
-                <li>
+                <li><a href='login.html' class= '#795548 brown-text'>Login!</a>
                     <!--Login tab-->
                 </li>
-                <li>
+                <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
                     <!--Sign up tab-->
                 </li>
             </ul>
+            </div>
         </nav>
         <!--End navigation-->
     </header>
 
-    <section id="hero" class="intro">
-        <div class="col-1">
-            <h2>
-                Your furry friends' paradise <br>
+    <section class='row'>
+        <div class='col s6'>
+            <h2 class='#f57c00 orange-text text-darken-2'>
+                Your furry friends' paradise <br> <h3 class='#795548 brown-text'>Want to take a walk in the park? Looking for a dog sitter? Maybe your buddy deserves a treat?</h3><br><p class='#7cb342 light-green-text text-darken-1'> We have all your furry friends' needs!</p>
+                </h2>
                 <!--Unique marketing pitch to captivate users to use our services-->
-            </h2>
-            <button>
+            <button class='#795548 brown'><a href='login.html' class='#f57c00 orange-text text-darken-2'>Login!</a>
                 <!--Login button-->
             </button>
-            <button>
+            <button class='#795548 brown'><a href='sign-up.html' class='#f57c00 orange-text text-darken-2'>Sign Up!</a>
                 <!--Sign up button-->
             </button>
         </div>
-        <div class="col-2">
+        <div class="col s6">
             <!--This is where the random pics of dogs would be inserted through javascript-->
         </div>
     </section>
