search city bar and footer added

--- a/sign-up.html
+++ b/sign-up.html
@@ -37,3 +37,10 @@
         </nav>
         <!--End navigation-->
     </header>
+
+    <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+        <h6> © 2021 Copyright Ohio State Bootcamp</h6>
+    </footer>
+
+</body>
+</html>
