--- a/bon-appetit.html
+++ b/bon-appetit.html
@@ -15,25 +15,34 @@
         <nav>
             <div class='nav-wrapper #7cb342 light-green darken-1'>
                 <a href='/' class='brand-logo'>Ruff! Ruff!</a>
-            <ul id='nav-mobile' class='right hide-on-med-and-down'>
-                <!--Should we attempt to add a search bar?-->
-                <li><a href='walkers.html'>Walkers</a>
-                    <!--First tab goes here-->
-                </li>
-                <li><a href='sitters.html'>Sitters</a>
-                    <!--Second tab-->
-                </li>
-                <li><a href='bon-appetit.html'>Bon Appetit</a>
-                    <!--third tab-->
-                </li>
-                <li><a href='login.html'>Login!</a>
-                    <!--Login tab-->
-                </li>
-                <li><a href='sign-up.html'>Sign Up!</a>
-                    <!--Sign up tab-->
-                </li>
-            </ul>
+                <ul id='nav-mobile' class='right hide-on-med-and-down'>
+                    <!--Should we attempt to add a search bar?-->
+                    <li><a href='walkers.html'>Walkers</a>
+                        <!--First tab goes here-->
+                    </li>
+                    <li><a href='sitters.html'>Sitters</a>
+                        <!--Second tab-->
+                    </li>
+                    <li><a href='bon-appetit.html'>Bon Appetit</a>
+                        <!--third tab-->
+                    </li>
+                    <li><a href='login.html'>Login!</a>
+                        <!--Login tab-->
+                    </li>
+                    <li><a href='sign-up.html'>Sign Up!</a>
+                        <!--Sign up tab-->
+                    </li>
+                </ul>
             </div>
         </nav>
         <!--End navigation-->
     </header>
+
+
+    <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+        <h6> © 2021 Copyright Ohio State Bootcamp</h6>
+    </footer>
+
+
+</body>
+</html>
