--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         <nav>
             <div class='nav-wrapper #7cb342 light-green darken-1'>
                 <a href='/' class='brand-logo'>Ruff! Ruff!</a>
-            <ul id='nav-mobile' class='right hide-on-med-and-down'>
-                <!--Should we attempt to add a search bar?-->
-                <li><a href='walkers.html'>Walkers</a>
-                    <!--First tab goes here-->
-                </li>
-                <li><a href='sitters.html'>Sitters</a>
-                    <!--Second tab-->
-                </li>
-                <li><a href='bon-appetit.html'>Bon Appetit</a>
-                    <!--third tab-->
-                </li>
-                <li><a href='login.html' class= '#795548 brown-text'>Login!</a>
-                    <!--Login tab-->
-                </li>
-                <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
-                    <!--Sign up tab-->
-                </li>
-            </ul>
+                <ul id='nav-mobile' class='right hide-on-med-and-down'>
+                    <!--Should we attempt to add a search bar?-->
+                    <li><a href='walkers.html'>Walkers</a>
+                        <!--First tab goes here-->
+                    </li>
+                    <li><a href='sitters.html'>Sitters</a>
+                        <!--Second tab-->
+                    </li>
+                    <li><a href='bon-appetit.html'>Bon Appetit</a>
+                        <!--third tab-->
+                    </li>
+                    <li><a href='login.html' class='#795548 brown-text'>Login!</a>
+                        <!--Login tab-->
+                    </li>
+                    <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
+                        <!--Sign up tab-->
+                    </li>
+                </ul>
             </div>
         </nav>
         <!--End navigation-->
@@ -41,9 +41,12 @@
     <section class='row'>
         <div class='col s6'>
             <h2 class='#f57c00 orange-text text-darken-2'>
-                Your furry friends' paradise <br> <h3 class='#795548 brown-text'>Want to take a walk in the park? Looking for a dog sitter? Maybe your buddy deserves a treat?</h3><br><p class='#7cb342 light-green-text text-darken-1'> We have all your furry friends' needs!</p>
-                </h2>
-                <!--Unique marketing pitch to captivate users to use our services-->
+                Your furry friends' paradise <br>
+                <h3 class='#795548 brown-text'>Want to take a walk in the park? Looking for a dog sitter? Maybe your
+                    buddy deserves a treat?</h3><br>
+                <p class='#7cb342 light-green-text text-darken-1'> We have all your furry friends' needs!</p>
+            </h2>
+            <!--Unique marketing pitch to captivate users to use our services-->
             <button class='#795548 brown'><a href='login.html' class='#f57c00 orange-text text-darken-2'>Login!</a>
                 <!--Login button-->
             </button>
@@ -51,6 +54,17 @@
                 <!--Sign up button-->
             </button>
         </div>
+
+
+
+
+
+
+
+
+
+
+
         <div class="col s6">
             <!--This is where the random pics of dogs would be inserted through javascript-->
         </div>
@@ -64,12 +78,10 @@
 
     <!--add more homepage content as need-->
 
-    <footer>
-
+    <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+        <h6> © 2021 Copyright Ohio State Bootcamp</h6>
     </footer>
 
 
-
 </body>
-
 </html>
