--- a/walkers.html
+++ b/walkers.html
@@ -15,25 +15,55 @@
         <nav>
             <div class='nav-wrapper #7cb342 light-green darken-1'>
                 <a href='/' class='brand-logo'>Ruff! Ruff!</a>
-            <ul id='nav-mobile' class='right hide-on-med-and-down'>
-                <!--Should we attempt to add a search bar?-->
-                <li><a href='walkers.html'>Walkers</a>
-                    <!--First tab goes here-->
-                </li>
-                <li><a href='sitters.html'>Sitters</a>
-                    <!--Second tab-->
-                </li>
-                <li><a href='bon-appetit.html'>Bon Appetit</a>
-                    <!--third tab-->
-                </li>
-                <li><a href='login.html'>Login!</a>
-                    <!--Login tab-->
-                </li>
-                <li><a href='sign-up.html'>Sign Up!</a>
-                    <!--Sign up tab-->
-                </li>
-            </ul>
+
+                <ul id='nav-mobile' class='right hide-on-med-and-down'>
+                    <!--Should we attempt to add a search bar?-->
+                    <li><a href='walkers.html'>Walkers</a>
+                        <!--First tab goes here-->
+                    </li>
+                    <li><a href='sitters.html'>Sitters</a>
+                        <!--Second tab-->
+                    </li>
+                    <li><a href='bon-appetit.html'>Bon Appetit</a>
+                        <!--third tab-->
+                    </li>
+                    <li><a href='login.html'>Login!</a>
+                        <!--Login tab-->
+                    </li>
+                    <li><a href='sign-up.html'>Sign Up!</a>
+                        <!--Sign up tab-->
+                    </li>
+                </ul>
             </div>
         </nav>
         <!--End navigation-->
     </header>
+
+    <section>
+
+
+        <h3>City Search</h3>
+
+
+
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input placeholder="Enter CIty:" id="city-search" type="text" class="validate">
+                        <a class="waves-effect waves-light btn">Search</a>
+                    </div>
+                    <div class="resaults"></div>
+            </form>
+        </div>
+
+
+    </section>
+    <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+        <h6> © 2021 Copyright Ohio State Bootcamp</h6>
+    </footer>
+
+
+</body>
+
+</html>
