--- a/walkers.html
+++ b/walkers.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Ruff! Ruff!</title>
 </head>
 
@@ -56,14 +57,15 @@
                     <div class="resaults"></div>
             </form>
         </div>
-
+        
 
     </section>
     <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
-        <h6> © 2021 Copyright Ohio State Bootcamp</h6>
+        <h6> © 2021 Copyright Ohio State Bootcamp </h6>
+        
     </footer>
 
-
+<script src="assets/script.js"></script>
 </body>
 
 </html>
