--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header style='position:fixed; width:100%;'>
         <!--Navagation bar-->
         <nav>
             <div class='nav-wrapper #7cb342 light-green darken-1'>
@@ -52,7 +52,52 @@
             </button>
         </div>
         <div class="col s6">
-            <!--This is where the random pics of dogs would be inserted through javascript-->
+            <ul class='slides'>
+                <li class=''>
+                    <img src='assets/images/1.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/2.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/3.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/4.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/5.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/6.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/7.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/8.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/9.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/10.jpg'>
+                </li>
+                </ul>
+                <!--<input type='radio' name='radio-btn' id='radio1'>
+                <input type='radio' name='radio-btn' id='radio2'>
+                <input type='radio' name='radio-btn' id='radio3'>
+                <input type='radio' name='radio-btn' id='radio4'>
+                <input type='radio' name='radio-btn' id='radio5'>
+                <input type='radio' name='radio-btn' id='radio6'>
+                <input type='radio' name='radio-btn' id='radio7'>
+                <input type='radio' name='radio-btn' id='radio8'>
+                <input type='radio' name='radio-btn' id='radio9'>
+                <input type='radio' name='radio-btn' id='radio10'>-->
+            </div>
+
+
+
         </div>
     </section>
 
@@ -64,12 +109,11 @@
 
     <!--add more homepage content as need-->
 
-    <footer>
-
+    <footer class="page-footer #795548 brown" style="bottom:0;left:0;width:100%;">
+        <h6> © 2021 Copyright Ohio State Bootcamp</h6>
     </footer>
 
-
-
+<script src='assets/script.js'></script>
 </body>
 
 </html>
