--- a/walkers.html
+++ b/walkers.html
@@ -26,10 +26,10 @@
                 <li><a href='bon-appetit.html'>Bon Appetit</a>
                     <!--third tab-->
                 </li>
-                <li><a href='login.html'>Login!</a>
+                <li><a href='login.html' class='#795548 brown-text' >Login!</a>
                     <!--Login tab-->
                 </li>
-                <li><a href='sign-up.html'>Sign Up!</a>
+                <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
                     <!--Sign up tab-->
                 </li>
             </ul>
@@ -37,3 +37,26 @@
         </nav>
         <!--End navigation-->
     </header>
+
+    <h3 class='#f57c00 orange-text text-darken-2'>City Search</h3>
+
+
+
+    <div class="row">
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s6">
+                    <input placeholder="Enter CIty:" id="city-search" type="text" class="validate">
+                    <a class="waves-effect waves-light btn #f57c00 orange darken-2">Search</a>
+                </div>
+                <div class="resaults"></div>
+        </form>
+    </div>
+
+
+</section>
+<footer class="page-footer #795548 brown" style="position:fixed;bottom:0;left:0;width:100%;">
+    <h6> © 2021 Copyright Ohio State Bootcamp</h6>
+</footer>
+</body>
+</html>
