--- a/sign-up.html
+++ b/sign-up.html
@@ -37,3 +37,19 @@
         </nav>
         <!--End navigation-->
     </header>
+
+    <div class='sign-up-form center-align'>
+        <h1>Sign Up Now</h1>
+        <form>
+            <input type='email' class='input-box' placeholder='Your email'>
+            <input type='password' class='input-box' placeholder='Your Password'>
+            <p><span><input type='checkbox'></span> I Agree to the terms of services</p>
+            <button type='button' class='sign-btn'>Sign Up</button>
+            <hr>
+            <p class='or'>OR</p>
+            <button type='button' class='sign-btn'>Sign up with Google</button>
+            <p>Already have an account? <a href='login.html'>Login!</a> </p>
+        </form>
+    </div>
+    </body>
+    </html>
