--- a/index.html
+++ b/index.html
@@ -54,6 +54,51 @@
                 <!--Sign up button-->
             </button>
         </div>
+        <div class="col s6">
+            <!--This is where the random pics of dogs would be inserted through javascript-->
+            <ul class='slides'>
+                <li class=''>
+                    <img src='assets/images/1.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/2.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/3.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/4.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/5.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/6.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/7.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/8.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/9.jpg'>
+                </li>
+                <li>
+                    <img src='assets/images/10.jpg'>
+                </li>
+                </ul>
+                <!--<input type='radio' name='radio-btn' id='radio1'>
+                <input type='radio' name='radio-btn' id='radio2'>
+                <input type='radio' name='radio-btn' id='radio3'>
+                <input type='radio' name='radio-btn' id='radio4'>
+                <input type='radio' name='radio-btn' id='radio5'>
+                <input type='radio' name='radio-btn' id='radio6'>
+                <input type='radio' name='radio-btn' id='radio7'>
+                <input type='radio' name='radio-btn' id='radio8'>
+                <input type='radio' name='radio-btn' id='radio9'>
+                <input type='radio' name='radio-btn' id='radio10'>-->
+            </div>
 
 
 
