--- a/sign-up.html
+++ b/sign-up.html
@@ -37,7 +37,43 @@
         </nav>
         <!--End navigation-->
     </header>
+    <div class="row">
+        <div class="col s12 m12">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title"><h3>Sign up to find the perfect park.</h3></span>
+                <form class="container">
+                  <div class = "row">
+                    <div class="input-field col s6">
+                      <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                      <label for="first_name">First Name</label>
+                    </div>
+                    <div class="input-field col s6">
+                      <input id="last_name" type="text" class="validate">
+                      <label for="last_name">Last Name</label>
+                    </div>
+                   
+                    <div class="input-field col m6">
+                      <input id="email" type="email" class="validate">
+                      <label for="email">Email</label>
+                    </div>
+                    <div class="input-field col m6">
+                      <button class="btn waves-effect waves-light" type="submit" name="action">
+                         <i class="material-icons right">SUBMIT</i>
+                      </button>
+                    </div>
+                  </div>
+                </form>
 
+
+            </div>
+
+          </div>
+        </div>
+      </div><!-- End of Sign Up 
+
+
+   
     <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
         <h6> © 2021 Copyright Ohio State Bootcamp</h6>
     </footer>
