--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 
     <footer>
 
+        <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+            <h6> © 2021 Copyright Ohio State Bootcamp</h6>
+        </footer>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
