--- a/walkers.html
+++ b/walkers.html
@@ -51,9 +51,19 @@
                 <div class="row">
                     <div class="input-field col s6">
                         <input placeholder="Enter CIty:" id="city-search" type="text" class="validate">
-                        <a class="waves-effect waves-light btn">Search</a>
+                        <ul id="options" class="options">
+
+
+                            <a class="waves-effect waves-light btn">Search</a>
                     </div>
-                    <div class="resaults"></div>
+                    
+                    <div class="resaults">
+                        <ul id"list class="city">
+                            <li></li>
+
+                        </ul>
+
+                    </div>
             </form>
         </div>
 
@@ -66,4 +76,5 @@
 
 </body>
 <script src="./assets/script.js"></script>
+
 </html>
