--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                           <form class="container">
                             <div class = "row">
                               <div class="input-field col s6">
-                                <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                                <label for="first_name">First Name</label>
+                                <input id="first_name" type="text" class="validate">
+                                <label  class="active" for="first_name">First Name</label>
                               </div>
                               <div class="input-field col s6">
                                 <input id="last_name" type="text" class="validate">
@@ -72,7 +72,7 @@
                                 <label for="email">Email</label>
                               </div>
                               <div class="input-field col m6">
-                                <button class="btn waves-effect waves-light" type="submit" name="action">
+                                <button class="btn class= #795548 brown #f57c00 orange-text text-darken-2" type="submit" name="action">
                                    <i class="material-icons right">SUBMIT</i>
                                 </button>
                               </div>
