--- a/sign-up.html
+++ b/sign-up.html
@@ -45,7 +45,7 @@
                 <form class="container">
                   <div class = "row">
                     <div class="input-field col s6">
-                      <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                      <input  id="first_name" type="text" class="validate">
                       <label for="first_name">First Name</label>
                     </div>
                     <div class="input-field col s6">
@@ -58,8 +58,8 @@
                       <label for="email">Email</label>
                     </div>
                     <div class="input-field col m6">
-                      <button class="btn waves-effect waves-light" type="submit" name="action">
-                         <i class="material-icons right">SUBMIT</i>
+                      <button class="btn class= #795548 brown #f57c00 orange-text text-darken-2" type="submit" name="action">
+                         <i class="material-icons right"></i>SUBMIT 
                       </button>
                     </div>
                   </div>
