--- a/sitters.html
+++ b/sitters.html
@@ -52,7 +52,7 @@
         <div class="modal" id="terms">
             <div class="modal-content">
                 <h3>Subscribe</h3>
-                <p>Subscribe and like our page on Facebook! <a href="https://www.facebook.com/" onclick="toggleModal();">Facebook</a>
+                <p>Subscribe and like our page on <a href="https://www.facebook.com/"!onclick="toggleModal();">Facebook</a>
                 </p>
             </div>
             <div class="modal-footer">
@@ -60,22 +60,6 @@
             </div>
         </div>
     </div>
-
-
-
-    <section class="infomodal">
-        <div id="modal3" class="modal">
-            <div class="modal-content">
-                <h4 id="info-modal-heading">Link disabled</h4>
-                <p id="info-modal-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum voluptatum qui, dolorem quas commodi nesciunt veniam eveniet laudantium culpa earum eius quis facere enim hic maxime ab eum ad quos?</p>
-            </div>
-            <div class="modal-footer">
-                <a href="#" class="modal-close waves-effect btn-flat">Close</a>
-            </div>
-        </div>
-    </section>
-
-
 
 
 
