--- a/bon-appetit.html
+++ b/bon-appetit.html
@@ -9,7 +9,7 @@
     <title>Ruff! Ruff!</title>
 </head>
 
-<body>
+<body class=''>
     <header>
         <!--Navagation bar-->
         <nav>
@@ -26,10 +26,10 @@
                 <li><a href='bon-appetit.html'>Bon Appetit</a>
                     <!--third tab-->
                 </li>
-                <li><a href='login.html'>Login!</a>
+                <li><a href='login.html' class='#795548 brown-text'>Login!</a>
                     <!--Login tab-->
                 </li>
-                <li><a href='sign-up.html'>Sign Up!</a>
+                <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
                     <!--Sign up tab-->
                 </li>
             </ul>
@@ -37,3 +37,24 @@
         </nav>
         <!--End navigation-->
     </header>
+
+    <h1 class='center-align #ffb74d orange lighten-2 #795548 brown-text'>Sweet Dog Treats Bone Appetit
+    <section class='row'>
+        <div class='col s6 #f57c00 orange darken-2'>
+            <h3 class='center-align'>CRANBERRY CHEDDAR BONES - $9</h3><h5 class='center-align #ffffff white-text'>crunchy treats with whole dried cranberries</h5>
+            <h3 class='center-align'>PEANUT BUTTER BONES - $9</h3><h5 class='center-align #ffffff white-text' >our signature treats loaded with real peanut butter</h5><h3 class='center-align' >GIANT CONFETTI COOKIE - $8</h3><h5 class='center-align #ffffff white-text' >a big bone topped with 'confetti'... perfect for a celebration or just because</h5>
+        </div>
+        <div class='col s6 #f57c00 orange darken-2'>
+            <h3 class='center-align'>APPLE & CARROT BITES - $5</h3><h5 class='center-align #ffffff white-text' >Our smallest treat, perfect for small mouths</h5>
+            <h3 class='center-align'>MAPLE BACON BONES - $9</h3><h5 class='center-align #ffffff white-text'>our most popular flavor...who doesn't love bacon?</h5>
+            <h3 class='center-align'>JUMBO FROSTED PUPCAKE - $8</h3><h5 class='center-align #ffffff white-text'>a big cupcake with frosting, bacon & topped with a personalized treat</h5>
+        </div>
+        </section>
+        </h1>
+        
+    </section>
+    <section class='center-align'>
+        <h2 class='light-green-text text-darken-1'>All treats are made to order to gaurantee freshness and customer satisfaction</h2>
+    </section>
+    </body>
+    </html>
