--- a/bon-appetit.html
+++ b/bon-appetit.html
@@ -56,5 +56,8 @@
     <section class='center-align'>
         <h2 class='light-green-text text-darken-1'>All treats are made to order to gaurantee freshness and customer satisfaction</h2>
     </section>
+    <footer class="page-footer #795548 brown" style="bottom:0;left:0;width:100%;">
+        <h6> © 2021 Copyright Ohio State Bootcamp</h6>
+    </footer>
     </body>
     </html>
