api are up and working

--- a/walkers.html
+++ b/walkers.html
@@ -45,7 +45,7 @@
         <h3>City Search</h3>
 
 
-
+<!--container where we put the city search and resaults of the search-->
         <div class="row">
             <form class="col s12">
                 <div class="row">
@@ -54,11 +54,12 @@
                         <a class="waves-effect waves-light btn">Search</a>
                     </div>
                     <div class="row"></div>
+                    <div id='dog-parks'></div>
                     <ul id=citySearch></ul>
             </form>
         </div>
 
-
+<!--created footer for the page-->
     </section>
     <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
         <h6> © 2021 Copyright Ohio State Bootcamp</h6>
