updated sign up & bone appetit and minor fixes

--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
                     <li><a href='bon-appetit.html'>Bon Appetit</a>
                         <!--third tab-->
                     </li>
-                    <li><a href='login.html' class='#795548 brown-text'>Login!</a>
-                        <!--Login tab-->
-                    </li>
                     <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
                         <!--Sign up tab-->
                     </li>
@@ -48,10 +45,6 @@
                     buddy deserves a treat?</h3><br>
                 <p class='#7cb342 light-green-text text-darken-1'> We have all your furry friends' needs!</p>
             </h2>
-            <!--Unique marketing pitch to captivate users to use our services-->
-            <button class='#795548 brown'><a href='login.html' class='#f57c00 orange-text text-darken-2'>Login!</a>
-                <!--Login button-->
-            </button>
             <button class='#795548 brown'><a href='sign-up.html' class='#f57c00 orange-text text-darken-2'>Sign Up!</a>
                 <!--Sign up button-->
             </button>
@@ -109,33 +102,6 @@
             </div>
 
         </div>
-
-        <!--<input type='radio' name='radio-btn' id='radio1'>
-                <input type='radio' name='radio-btn' id='radio2'>
-                <input type='radio' name='radio-btn' id='radio3'>
-                <input type='radio' name='radio-btn' id='radio4'>
-                <input type='radio' name='radio-btn' id='radio5'>
-                <input type='radio' name='radio-btn' id='radio6'>
-                <input type='radio' name='radio-btn' id='radio7'>
-                <input type='radio' name='radio-btn' id='radio8'>
-                <input type='radio' name='radio-btn' id='radio9'>
-                <input type='radio' name='radio-btn' id='radio10'>-->
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <div class="col s6">
-            <!--This is where the random pics of dogs would be inserted through javascript-->
         </div>
     </section>
 
@@ -147,7 +113,7 @@
 
     <!--add more homepage content as need-->
 
-    <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+    <footer class="page-footer #795548 brown" style="bottom:0;left:0;width:100%;">
         <h6> © 2021 Copyright Ohio State Bootcamp</h6>
     </footer>
     <script type="text/javascript" src="js/materialize.min.js"></script>
