--- a/walkers.html
+++ b/walkers.html
@@ -27,10 +27,7 @@
                     <li><a href='bon-appetit.html'>Bon Appetit</a>
                         <!--third tab-->
                     </li>
-                    <li><a href='login.html'>Login!</a>
-                        <!--Login tab-->
-                    </li>
-                    <li><a href='sign-up.html'>Sign Up!</a>
+                    <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
                         <!--Sign up tab-->
                     </li>
                 </ul>
@@ -61,7 +58,7 @@
 
 <!--created footer for the page-->
     </section>
-    <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+    <footer class="page-footer #795548 brown" style="bottom:0;left:0;width:100%;">
         <h6> © 2021 Copyright Ohio State Bootcamp</h6>
     </footer>
 
