--- a/sign-up.html
+++ b/sign-up.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>Ruff! Ruff!</title>
 </head>
@@ -26,10 +27,7 @@
           <li><a href='bon-appetit.html'>Bon Appetit</a>
             <!--third tab-->
           </li>
-          <li><a href='login.html'>Login!</a>
-            <!--Login tab-->
-          </li>
-          <li><a href='sign-up.html'>Sign Up!</a>
+          <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
             <!--Sign up tab-->
           </li>
         </ul>
@@ -37,49 +35,109 @@
     </nav>
     <!--End navigation-->
   </header>
-  <div class="row">
-    <div class="col s12 m12">
-      <div class="card">
-        <div class="card-content">
-          <span class="card-title">
-            <h3>Sign up to find the perfect park.</h3>
-          </span>
-          <form class="container">
-            <div class="row">
-              <div class="input-field col s6">
-                <input placeholder="" id="first_name" type="text" class="validate">
-                <label for="first_name">First Name</label>
-              </div>
-              <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Last Name</label>
-              </div>
-
-              <div class="input-field col m6">
-                <input id="email" type="email" class="validate">
-                <label for="email">Email</label>
-              </div>
-              <div class="input-field col m6">
-                <button class="btn waves-effect waves-light" type="submit" name="action">
-                  <i class="material-icons right">SUBMIT</i>
-                </button>
-              </div>
-            </div>
-          </form>
-
-
-        </div>
-
+    <!--Slider-->
+ <section class='container section'>
+  <div class='row'>
+      <div class='col s12 l6'>
+          <h4 class='center'></h4>
+          <div class='slider'>
+              <ul class='slides'>
+                  <li><img src='assets/images/11.jpg'></li>
+                  <li><img src='assets/images/12.jpg'></li>
+                  <li><img src='assets/images/13.jpg'></li>
+                  <li><img src='assets/images/14.jpg'></li>
+                  <li><img src='assets/images/15.jpg'></li>
+              </ul>
+          </div>
+          <h6 class='center'><b>SIGN UP</b> & <b>ENJOY OUR SERVICES!   </b></h6>
       </div>
-    </div>
+
+<!--Sign-up Form-->
+         <div class='col s12 l5 offset-li'>
+             <form action=''>
+                 <h4 class='center-align'>Sign Up</h4>
+
+                 <div class="input-field">
+                     <i class="material-icons prefix">account_box</i>
+                     <input type='text' id='name'>
+                     <label for='name'>Enter Name Here</label>
+                 </div>
+                 <div class="input-field">
+                     <i class="material-icons prefix">email</i>
+                     <input type='email' id='email'>
+                     <label for='name'>example@gmail.com</label>
+                 </div>
+                 <div class="input-field">
+                     <i class="material-icons prefix">password</i>
+                     <input type='password' id='password'>
+                     <label for='name'>Your Password Here</label>
+                 </div>
+                 <div class="input-field">
+                     <i class="material-icons prefix">today</i>
+                     <input type='text' id='date'>
+                     <label for='date'>Date Of Birth Here</label>
+                 </div>
+                 <div class="input-field">
+                     <p>Gender</p>
+                     <p>
+                         <label>
+                             <input type='checkbox'>
+                             <span>Female</span>
+                         </label><br>
+                         <label>
+                             <input type='checkbox'>
+                             <span>Male</span>
+                         </label><br>
+                         <label>
+                             <input type='checkbox'>
+                             <span>Other</span>
+                         </label>
+                     </p>
+                     <p>
+                         <label>
+                             <input type='checkbox' class='filled-in' checked='checked'>
+                             <span>I accept the <b>Terms of use & Privacy Policies</b>.</span>
+                         </label>
+                     </p>
+                     <div class='input-field center'>
+                         <button class='btn #f57c00 orange darken-2 white-text'>SIGN UP</button>
+                     </div>
+                 </div>
+             </form>
+         </div>
   </div>
+</section>
+  
+<!--Sign-up Form-->
+    
+
+<!--Compiled and minified Jquery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+ 
+<script>
+ $(document).ready(function(){
+   $('.slider').slider
+ })
+</script>
 
 
 
-  <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+  <footer class="page-footer #795548 brown" style="bottom:0;left:0;width:100%;">
     <h6> © 2021 Copyright Ohio State Bootcamp</h6>
   </footer>
 
 </body>
 
+<!--Compiled and minified Jquery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+ 
+<script>
+ $(document).ready(function(){
+   $('.slider').slider
+ })
+</script>
 </html>
