script to sign up

--- a/bon-appetit.html
+++ b/bon-appetit.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <!--Navagation bar-->
-        <nav>
+        <nav style='position: fixed;'
             <div class='nav-wrapper #7cb342 light-green darken-1'>
                 <a href='/' class='brand-logo'>Ruff! Ruff!</a>
             <ul id='nav-mobile' class='right hide-on-med-and-down'>
