--- a/sign-up.html
+++ b/sign-up.html
@@ -128,16 +128,15 @@
     <h6> © 2021 Copyright Ohio State Bootcamp</h6>
   </footer>
 
-</body>
-
-<!--Compiled and minified Jquery-->
+  <!--Compiled and minified Jquery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
  
 <script>
  $(document).ready(function(){
-   $('.slider').slider
+   $('.slider').slider()
  })
 </script>
+</body>
 </html>
