more updates made app cohesive

--- a/bon-appetit.html
+++ b/bon-appetit.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <!--Navagation bar-->
-        <nav style='position: fixed;'
+        <nav>
             <div class='nav-wrapper #7cb342 light-green darken-1'>
                 <a href='/' class='brand-logo'>Ruff! Ruff!</a>
             <ul id='nav-mobile' class='right hide-on-med-and-down'>
@@ -23,7 +23,7 @@
                 <li><a href='sitters.html'>Sitters</a>
                     <!--Second tab-->
                 </li>
-                <li><a href='bon-appetit.html'>Bon Appetit</a>
+                <li><a href='bon-appetit.html'>Bone Appetit</a>
                     <!--third tab-->
                 </li>
                 <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
