--- a/sign-up.html
+++ b/sign-up.html
@@ -24,7 +24,7 @@
           <li><a href='sitters.html'>Sitters</a>
             <!--Second tab-->
           </li>
-          <li><a href='bon-appetit.html'>Bon Appetit</a>
+          <li><a href='bon-appetit.html'>Bone Appetit</a>
             <!--third tab-->
           </li>
           <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
@@ -49,36 +49,36 @@
                   <li><img src='assets/images/15.jpg'></li>
               </ul>
           </div>
-          <h6 class='center'><b>SIGN UP</b> & <b>ENJOY OUR SERVICES!   </b></h6>
+          <h6 class='center #f57c00 orange-text text-darken-2'><b>SIGN UP</b> & <b>ENJOY OUR SERVICES!   </b></h6>
       </div>
 
 <!--Sign-up Form-->
          <div class='col s12 l5 offset-li'>
              <form action=''>
-                 <h4 class='center-align'>Sign Up</h4>
+                 <h4 class='center-align #f57c00 orange-text text-darken-2'>Sign Up</h4>
 
                  <div class="input-field">
                      <i class="material-icons prefix">account_box</i>
                      <input type='text' id='name'>
-                     <label for='name'>Enter Name Here</label>
+                     <label for='name' class='#f57c00 orange-text text-darken-2'>Enter Name Here</label>
                  </div>
                  <div class="input-field">
                      <i class="material-icons prefix">email</i>
                      <input type='email' id='email'>
-                     <label for='name'>example@gmail.com</label>
+                     <label for='name' class='#f57c00 orange-text text-darken-2'>example@gmail.com</label>
                  </div>
                  <div class="input-field">
                      <i class="material-icons prefix">password</i>
                      <input type='password' id='password'>
-                     <label for='name'>Your Password Here</label>
+                     <label for='name' class='#f57c00 orange-text text-darken-2'>Your Password Here</label>
                  </div>
                  <div class="input-field">
                      <i class="material-icons prefix">today</i>
                      <input type='text' id='date'>
-                     <label for='date'>Date Of Birth Here</label>
+                     <label for='date' class='#f57c00 orange-text text-darken-2'>Date Of Birth Here</label>
                  </div>
                  <div class="input-field">
-                     <p>Gender</p>
+                     <p class='#f57c00 orange-text text-darken-2'>Gender</p>
                      <p>
                          <label>
                              <input type='checkbox'>
@@ -94,7 +94,7 @@
                          </label>
                      </p>
                      <p>
-                         <label>
+                         <label class='#f57c00 orange-text text-darken-2'>
                              <input type='checkbox' class='filled-in' checked='checked'>
                              <span>I accept the <b>Terms of use & Privacy Policies</b>.</span>
                          </label>
