--- a/sitters.html
+++ b/sitters.html
@@ -31,7 +31,7 @@
                     <li><a href='sitters.html'>Sitters</a>
                         <!--Second tab-->
                     </li>
-                    <li><a href='bon-appetit.html'>Bon Appetit</a>
+                    <li><a href='bon-appetit.html'>Bone Appetit</a>
                         <!--third tab-->
                     </li>
                     <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
@@ -55,6 +55,16 @@
             <div class="modal-footer">
                 <button class="btn red modal-close">Cancel</button>
             </div>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col s6'>
+            <h4 class='center #f57c00 orange-text text-darken-2'>Become A Sitter!</h4>
+            <p class='center #795548 brown-text'>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.<br>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.<br>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.</p>
+        </div>
+        <div class='col s6'>
+            <h4 class='center #f57c00 orange-text text-darken-2'>Get A Sitter</h4>
+            <p class='center #795548 brown-text'>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.<br>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.<br>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.</p>
         </div>
     </div>
 
