--- a/walkers.html
+++ b/walkers.html
@@ -24,7 +24,7 @@
                     <li><a href='sitters.html'>Sitters</a>
                         <!--Second tab-->
                     </li>
-                    <li><a href='bon-appetit.html'>Bon Appetit</a>
+                    <li><a href='bon-appetit.html'>Bone Appetit</a>
                         <!--third tab-->
                     </li>
                     <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
@@ -50,10 +50,28 @@
                         <input placeholder="Enter CIty:" id="city-search" type="text" class="validate">
                         <a class="waves-effect waves-light btn">Search</a>
                     </div>
+                    <div class='col s6'>
+                        <img src='assets/images/17.jpg'>
+                    </div>
                     <div class="row"></div>
                     <div id='dog-parks'></div>
                     <ul id=citySearch></ul>
             </form>
+            <section class='center #f57c00 orange darken-2 row'>
+                <div class='col s3'>
+                <h4 class='center #ffffff white-text'>Do you have a love for walking Dogs?</h4><p class='center #ffffff white-text'>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.</p>
+                </div>
+                <div class='col s3'>
+                <h4 class='center #ffffff white-text'>Our walking services</h4><p class='center #ffffff white-text'>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.</p>
+                </div>
+                <div class='col s3'>
+                <h4 class='center #ffffff white-text'>Become a professionally trained walker</h4><p class='center #ffffff white-text'>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.</p>
+                </div>
+                <div class='col s3'>
+                <h4 class='center #ffffff white-text'>Finding a park near you</h4><p class='center #ffffff white-text'>Lorem ipsum dolor sit amet, mea fierent omnesque constituam ut, ne vel clita voluptua repudiandae, no solum essent mea. Erat convenire has te, quot magna eu mel. Duo alia tritani consetetur at. Per te explicari quaerendum. Eos porro soluta ei. Ex nec stet omnes hendrerit, ex porro postea consequuntur vel. Te denique oportere est. Case aeque ne ius. Pro impetus eleifend ad. Tacimates incorrupte vim at, pri ponderum sensibus repudiare in Omnesque appetere ut vix, id suas persecuti persequeris per. Ad nec graece doctus virtute, diam libris ex his. Ius mazim fuisset in. Autem admodum omittam his ea, et nobis.</p>
+                </div>
+
+            </section>
         </div>
 
 <!--created footer for the page-->
