--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href='sitters.html'>Sitters</a>
                         <!--Second tab-->
                     </li>
-                    <li><a href='bon-appetit.html'>Bon Appetit</a>
+                    <li><a href='bon-appetit.html'>Bone Appetit</a>
                         <!--third tab-->
                     </li>
                     <li><a href='sign-up.html' class='#795548 brown-text'>Sign Up!</a>
@@ -108,7 +108,24 @@
     <!-- This section should be an short explanation about what our services are in a way that benefits the customer 
     I'd imagen that this would be column style just based on techniques that I've seen in a lot of sites-->
     <section id="">
+        <div class='row'>
+            <div class='col s4 '>
+                <h3 class='#f57c00 orange-text text-darken-2 center'>Walkers</h3>
+                <br><p class='#795548 brown-text center'>Lorem ipsum dolor sit amet, purto fugit laboramus ut per. Ad sea magna malorum pertinacia, assentior expetendis efficiendi te pro. Duo causae constituam ne. Vel at omnis nobis, omnes menandri singulis ne has, id mea malorum liberavisse. Dicta fabulas ut mel, vidit iusto pro an, omittam expetenda in nec. Qui ne omnium scaevola appellantur, usu in idque laudem iracundia, ornatus intellegam consequuntur sea ne. Eos graeco inimicus ei.</p>
+                <!--add walker content-->
+            </div>
+            <div class='col s4'>
+                <h3 class='#f57c00 orange-text text-darken-2 center'>Sitters</h3>
+                <br><p class='#795548 brown-text center'>Vivendo platonem per in, id inimicus scriptorem neglegentur his. Ei ius expetenda maluisset, erat nemore quo an. Omnis tation vel et, ei vix mutat diceret electram, sea ex ridens epicurei. Quo ne fierent vituperata, sit in duis epicuri. Et sea agam mutat definitiones.</p>
 
+                <!--add sitters content-->
+            </div>
+            <div class='col s4'>
+                <h3 class='#f57c00 orange-text text-darken-2 center'>Bone Appetit</h3>
+                <br><p class='#795548 brown-text center'> Et etiam iisque labitur vel. Eirmod inimicus has id, an sea sumo honestatis. Per id probo commune atomorum. Diceret referrentur an sed, omittam appellantur per ea. Nec deseruisse vituperata appellantur id. Cu his habeo consetetur. Quot neglegentur ea sit, vis an consul sapientem. Quo cu soleat impedit forensibus, at odio sententiae efficiendi usu, at tritani utroque eleifend mei. Sit in alia mucius causae, lorem facete doctus cu nec. No inermis adolescens nam. At graeco utamur iudicabit vim.</p>
+
+            </div>
+        </div>
     </section>
 
     <!--add more homepage content as need-->
